--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,7 @@
 	<artifactId>mvc-swagger-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
     <modules>
-        <module>springmvc-swagger</module>
-        <module>mvc-swagger</module>
+        <module>mvcSwagger</module>
     </modules>
     <packaging>pom</packaging>
 
